# circt-sv-basic

./: Cargo.toml  LICENSE.txt  README.md  env.sh
doc/: exploring-rust-and-circt.md
src/: main.rs
